--- a/public/stylesheets/css-output/main.css
+++ b/public/stylesheets/css-output/main.css
@@ -10749,19 +10749,37 @@ textarea.form-control-lg {
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  background-color: gray;
+  background-color: lightgray;
 }
 
 a {
   color: #00B7FF;
 }
 
-.image-header {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 40%;
-  padding-top: 100px;
+.cover-container {
+  max-width: 42em;
+}
+
+.nav-masthead .nav-link {
+  padding: 0.25rem 0;
+  font-weight: 700;
+  color: rgba(255, 255, 255, 0.5);
+  background-color: transparent;
+  border-bottom: 0.25rem solid transparent;
+}
+
+.nav-masthead .nav-link:hover,
+.nav-masthead .nav-link:focus {
+  border-bottom-color: rgba(255, 255, 255, 0.25);
+}
+
+.nav-masthead .nav-link + .nav-link {
+  margin-left: 1rem;
+}
+
+.nav-masthead .active {
+  color: #fff;
+  border-bottom-color: #fff;
 }
 
 /*# sourceMappingURL=main.css.map */
