--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html class="h-100">
   <head>
     <title>{{title}}</title>
     <link rel='stylesheet' href='/stylesheets/css-output/main.css' />
   </head>
-  <body>
+  <body class="d-flex h-100 text-center text-black">
     {{{body}}}
   </body>
 </html>
