--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,35 @@
-<img src={{image}} class='image-header'>
-<button>"Your Mom"</button>
+<style>
+    .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        user-select: none;
+    }
+</style>
+
+<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+    <header class ="mb-auto">
+    <div>
+        <h3 class="float-md-start mb-0">SCIAC</h3>
+        <nav class="nav nav-masthead justify-content-center float-md-end">
+        <a class="nav-link active" aria-current="page" href="#">Home</a>
+        <a class="nav-link" href="#">Contact</a>
+      </nav>
+    </div>
+    </header>
+
+    <main class="px-3">
+    <h1>Welcome to the SCIAC.</h1>
+        <p class="lead">Please select from the following options:</p>
+        <p class="lead">
+        <a href="#" class="btn btn-lg btn-primary fw-bold border-white bg-blue">Current officials</a></p>
+        <p class="lead">
+        <a href="#" class="btn btn-lg btn-primary fw-bold border-white bg-blue">Prospective officials</a></p>
+    </main>
+
+    <footer class="mt-auto text-white-50">
+        <p>Website &copy; 2021 Michael Frain</p>
+    </footer>
+
+</div>
