Insert links for 2021 foul reports

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,7 @@
 <img src={{image}} class='image-header'>
-<button>"Your Mom"</button>
+<br />
+<a href="https://docs.google.com/spreadsheets/d/1ivAGW4nGf7q45O4GuDrDWAo0G5Io9_8A9qUk7M0_j94/edit#gid=0">2021 foul report</a>
+<br />
+<a href="https://docs.google.com/forms/d/e/1FAIpQLSfjHXDVxjcEp9unt0WYmZ2nI284iqRChjfRIi2BctZxA2Un8Q/viewform">2021 observer's report</a>
+<br />
+<a href="https://docs.google.com/forms/d/e/1FAIpQLSexywPUsMU_14QIYF2i1d9hZbWPYjx0BdimYEn9DlkJkGlEZA/viewform">2021 coaches' report</a>
