Update foul report link

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -24,7 +24,7 @@
     <h1>Welcome to the SCIAC.</h1>
         <p class="lead">Please select from the following options:</p>
         <p class="lead">
-        <a href="https://docs.google.com/spreadsheets/d/1ivAGW4nGf7q45O4GuDrDWAo0G5Io9_8A9qUk7M0_j94/edit#gid=0" class="btn btn-lg btn-primary fw-bold border-white bg-blue">2021 Foul Report</a></p>
+        <a href="https://docs.google.com/spreadsheets/d/1RNIOYB6JfiaJQNhrf_75rnJLTy-TsRQAUeFPPrm4iwA/" class="btn btn-lg btn-primary fw-bold border-white bg-blue">2021 Foul Report</a></p>
         <p class="lead">
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSfjHXDVxjcEp9unt0WYmZ2nI284iqRChjfRIi2BctZxA2Un8Q/viewform" class="btn btn-lg btn-primary fw-bold border-white bg-blue">2021 Observer's Report</a></p>
         <p class="lead">
