Update with new link for registration

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,33 +8,17 @@
     }
 </style>
 
-<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-    <header class ="mb-auto">
-    <div>
-        {{!-- <img src={{image}} class='float-md-start mb-0'> --}}
-        <h3 class="float-md-start mb-0">SCIAC</h3>
-        <nav class="nav nav-masthead justify-content-center float-md-end">
-        <a class="nav-link active" aria-current="page" href="#">Home</a>
-        <a class="nav-link" href="mailto:michaelfrain@me.com">Contact</a>
-      </nav>
-    </div>
-    </header>
-
+<div>
     <main class="px-3">
     <h1>Welcome to the SCIAC.</h1>
         <p class="lead">Please select from the following options:</p>
-        <p class="lead">
-        <a href="https://docs.google.com/spreadsheets/d/1RNIOYB6JfiaJQNhrf_75rnJLTy-TsRQAUeFPPrm4iwA/" class="btn btn-lg btn-primary fw-bold border-white bg-blue">2021 Foul Report</a></p>
+        {{!-- <p class="lead"> --}}
+        {{!-- <a href="https://docs.google.com/spreadsheets/d/1RNIOYB6JfiaJQNhrf_75rnJLTy-TsRQAUeFPPrm4iwA/" class="btn btn-lg btn-primary fw-bold border-white bg-blue">2021 Foul Report</a></p>
         <p class="lead">
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSfjHXDVxjcEp9unt0WYmZ2nI284iqRChjfRIi2BctZxA2Un8Q/viewform" class="btn btn-lg btn-primary fw-bold border-white bg-blue">2021 Observer's Report</a></p>
         <p class="lead">
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSexywPUsMU_14QIYF2i1d9hZbWPYjx0BdimYEn9DlkJkGlEZA/viewform" class="btn btn-lg btn-primary fw-bold border-white bg-blue">2021 Coach's Report</a></p>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSexywPUsMU_14QIYF2i1d9hZbWPYjx0BdimYEn9DlkJkGlEZA/viewform" class="btn btn-lg btn-primary fw-bold border-white bg-blue">2021 Coach's Report</a></p> --}}
         <p class="lead">
-        <a href="register" class="btn btn-lg btn-primary fw-bold border-white bg-blue">New User Registration (beta)</a></p>
+        <a href="https://form.jotform.com/timengland07/profilesheet" class="btn btn-lg btn-primary fw-bold border-white bg-blue">New User Registration (beta)</a></p>
     </main>
-
-    <footer class="mt-auto text-white-50">
-        <p>Website &copy; 2021 Michael Frain</p>
-    </footer>
-
 </div>
