--- a/views/index.hbs
+++ b/views/index.hbs
@@ -19,6 +19,6 @@
         <p class="lead">
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSexywPUsMU_14QIYF2i1d9hZbWPYjx0BdimYEn9DlkJkGlEZA/viewform" class="btn btn-lg btn-primary fw-bold border-white bg-blue">2021 Coach's Report</a></p> --}}
         <p class="lead">
-        <a href="https://form.jotform.com/timengland07/profilesheet" class="btn btn-lg btn-primary fw-bold border-white bg-blue">New User Registration (beta)</a></p>
+        <a href="https://form.jotform.com/timengland07/profilesheet" class="btn btn-lg btn-primary fw-bold border-white bg-blue">2022 Application</a></p>
     </main>
 </div>
