--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,7 +11,7 @@
         <h3 class="float-md-start mb-0">SCIAC</h3>
         <nav class="nav nav-masthead justify-content-center float-md-end">
         <a class="nav-link active" aria-current="page" href="#">Home</a>
-        <a class="nav-link" href="/login">Login</a>
+        {{!-- <a class="nav-link" href="/login">Login</a> --}}
         <a class="nav-link" href="mailto:michaelfrain@me.com">Contact</a>
       </nav>
     </div>
