Fix SASS and stylesheets

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,6 +5,7 @@
     <link rel='stylesheet' href='/stylesheets/css-output/main.css' />
   </head>
   <body class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+    <link rel='stylesheet' href='/stylesheets/css-output/main.css' />
     <header class ="mb-auto">
     <div>
         {{!-- <img src={{image}} class='float-md-start mb-0'> --}}
