--- a/views/login.hbs
+++ b/views/login.hbs
@@ -8,5 +8,7 @@
     <label for="password">Password</label>
     <input type="password" class="form-control" id="password" name="password" placeholder="Password">
   </div>
+  <div>
   <button type="submit" class="btn btn-default">Submit</button>
+  </div>
 </form>
