--- a/public/stylesheets/sass-input/main.scss
+++ b/public/stylesheets/sass-input/main.scss
@@ -17,14 +17,14 @@ body {
   .nav-masthead .nav-link {
     padding: .25rem 0;
     font-weight: 700;
-    color: rgba(255, 255, 255, .5);
+    color: rgba(50, 50, 50, 0.5);
     background-color: transparent;
     border-bottom: .25rem solid transparent;
   }
   
   .nav-masthead .nav-link:hover,
   .nav-masthead .nav-link:focus {
-    border-bottom-color: rgba(255, 255, 255, .25);
+    border-bottom-color: rgba(0, 0, 255, 0.75);
   }
   
   .nav-masthead .nav-link + .nav-link {
@@ -32,8 +32,13 @@ body {
   }
   
   .nav-masthead .active {
-    color: #fff;
-    border-bottom-color: #fff;
+    color: rgba(0, 0, 0, 0.75);
+    border-bottom-color: rgba(0, 0, 0, 0.75);
+  } 
+
+  .img-shrink {
+    height: 50px;
+    width: 100px;
   }
 
   // 3. Include remainder of required Bootstrap stylesheets
