--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,11 +5,10 @@
     <link rel='stylesheet' href='/stylesheets/css-output/main.css' />
   </head>
   <body class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-    <link rel='stylesheet' href='/stylesheets/css-output/main.css' />
     <header class ="mb-auto">
     <div>
-        {{!-- <img src={{image}} class='float-md-start mb-0'> --}}
-        <h3 class="float-md-start mb-0">SCIAC</h3>
+        <img src={{image}} class='float-md-start mb-0 img-shrink'>
+        {{!-- <h3 class="float-md-start mb-0">SCIAC</h3> --}}
         <nav class="nav nav-masthead justify-content-center float-md-end">
         <a class="nav-link active" aria-current="page" href="#">Home</a>
         {{!-- <a class="nav-link" href="/login">Login</a> --}}
