--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,14 +1,22 @@
 
 <form action="/login" method="post">
+<div class="form-group">
+    <label for="firstname">First Name</label>
+    <input type="text" class="form-control" id="firstname" name="firstname" placeholder="First Name">
+  </div>
+  <div class="form-group">
+    <label for="lastname">Last Name</label>
+    <input type="text" class="form-control" id="lastname" name="lastname" placeholder="Last Name">
+  </div>
   <div class="form-group">
     <label for="username">Email address</label>
-    <input type="email" class="form-control" id="username" name="username" placeholder="Username">
+    <input type="email" class="form-control" id="email" name="email" placeholder="Username">
   </div>
   <div class="form-group">
     <label for="password">Password</label>
     <input type="password" class="form-control" id="password" name="password" placeholder="Password">
   </div>
   <div>
-  <button type="submit" class="btn btn-default">Submit</button>
+  <button type="submit" class="btn btn-primary">Submit</button>
   </div>
 </form>
