--- a/views/authlayout.hbs
+++ b/views/authlayout.hbs
@@ -9,8 +9,8 @@
     <div>
         <img src= "images/sciac-logo.png" class='float-md-start mb-0 img-shrink'>
         <nav class="nav nav-masthead justify-content-center float-md-end">
-        <a class={{{home}}} aria-current="page" href="/">Home</a>
-        <a class={{{profile}}} href="/profile">{{username}}</a>
+        <a class="nav-link {{home}}" href="/">Home</a>
+        <a class="nav-link {{profile}}" href="/profile">{{username}}</a>
       </nav>
     </div>
     </header>
