--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,7 +9,7 @@
 </style>
 
 <div>
-    <main class="px-3">
+    <main class="w-50 mx-auto text-center">
     <h1>Welcome to the SCIAC.</h1>
         <p class="lead">Please select from the following options:</p>
         {{!-- <p class="lead">
