--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,14 +1,14 @@
 
 <form action="/login" method="post">
-  <div class="form-group">
+  <div class="form-group w-50 mx-auto">
     <input type="email" class="form-control" id="email" name="email" placeholder="Username">
   </div>
   <br />
-  <div class="form-group">
+  <div class="form-group w-50 mx-auto">
     <input type="password" class="form-control" id="password" name="password" placeholder="Password">
   </div>
   <br />
-  <div>
+  <div class="w-50 mx-auto">
   <button type="submit" class="btn btn-primary">Login</button>
   </div>
 </form>
