Tweaked look and feel to something I like better

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,15 +1,5 @@
-<style>
-    .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        user-select: none;
-    }
-</style>
-
 <div>
-    <main class="w-50 mx-auto text-center">
+    <main class="w-auto mt-3 text-center">
     <h1>Welcome to the SCIAC.</h1>
         <p class="lead">Please select from the following options:</p>
         {{!-- <p class="lead">
