--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,25 +4,30 @@
     <title>{{title}}</title>
     <link rel='stylesheet' href='/stylesheets/css-output/main.css' />
   </head>
-  <body class="d-flex w-100 h-100 p-3 mx-auto flex-column">
+  <body class="d-flex w-100 h-100 p-0 mx-auto flex-column">
 
+  <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #76aedc">
     <div class="container">
-    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-      <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+      <a class="navbar-brand" href="/">
         <img src= "images/sciac-logo.png" class='float-md-start mb-0 img-shrink'>
       </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-      <ul class="nav nav-pills">
-        <li class="nav-item"><a href="/" class="nav-link {{home}}" aria-current="page">Home</a></li>
-        <li class="nav-item"><a href="/login" class="nav-link {{login}}">Login</a></li>
-        <li class="nav-item"><a href="/register" class="nav-link {{register}}">Register</a></li>
-      </ul>
-    </header>
-  </div>
+      <div class="collapse navbar-collapse" id="navbarsExample07">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0 justify-content-end">
+          <li class="nav-item"><a href="/" class="nav-link {{home}}" aria-current="page">Home</a></li>
+          <li class="nav-item"><a href="/login" class="nav-link {{login}}">Login</a></li>
+          <li class="nav-item"><a href="/register" class="nav-link {{register}}">Register</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
     {{{body}}}
 
-    <footer class="mt-auto text-black-50">
+    <footer class="mt-auto text-black-50 text-center">
         <p>Website &copy; 2022 Michael Frain/FCS West</p>
     </footer>
   </body>
