--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,5 +1,5 @@
 
-<form action="/register" method="post">
+<form action="/register" method="post" class="w-50 mt-3 mx-auto">
 <div class="form-group">
     <input type="text" class="form-control" id="firstname" name="firstname" placeholder="First Name">
   </div>
