--- a/views/partials/profile.hbs
+++ b/views/partials/profile.hbs
@@ -1,4 +1,4 @@
-<div class="d-flex flex-column flex-shrink-0 p-3 bg-light" style="width: 280px;">
+<div class="d-flex flex-column flex-shrink-0 h-100 bg-light p-2" style="width: 280px;">
     <ul class="nav nav-pills flex-column mb-auto">
       <li class="nav-item">
         <a href="/profile" class="nav-link {{basic}}" aria-current="page">
