--- a/views/profile-password.hbs
+++ b/views/profile-password.hbs
@@ -1,2 +1,24 @@
+<div class="hstack gap-3 h-100 w-100 p-0">
 {{> profile}}
-<p>Hello, world!</p>
+    <form class="h-100 p-3 w-100">
+    <div class="row mb-3">
+        <label for="oldpassword" class="col-sm-2 col-form-label">Old Password</label>
+        <div class="col-sm-6">
+        <input type="password" class="form-control" id="oldpassword" name="oldpassword">
+        </div>
+    </div>
+    <div class="row mb-3">
+        <label for="newpassword" class="col-sm-2 col-form-label">New Password</label>
+        <div class="col-sm-6">
+       <input type="password" class="form-control" id="newpassword" name="newpassword">
+        </div>
+    </div>
+    <div class="row mb-4">
+        <label for="newpasswordconfirm" class="col-sm-2 col-form-label">Confirm Password</label>
+        <div class="col-sm-6">
+       <input type="password" class="form-control" id="newpasswordconfirm" name="newpasswordconfirm">
+        </div>
+    </div>
+    <button type="submit" class="btn btn-primary">Confirm</button>
+    </form>
+</div>
