Update profile basic information entry/editing

--- a/views/profile-basic.hbs
+++ b/views/profile-basic.hbs
@@ -1,6 +1,6 @@
 <div class="hstack gap-3 h-100 w-100 p-0">
 {{> profile}}
-    <form class="h-100 p-3 w-100">
+    <form action="/profile" method="post" class="h-100 p-3 w-100">
     <div class="row mb-3">
         <label for="firstname" class="col-sm-2 col-form-label">First Name</label>
         <div class="col-sm-6">
