Update response rendering for login and profile

--- a/views/partials/profile.hbs
+++ b/views/partials/profile.hbs
@@ -1,3 +1,8 @@
+{{#if_not message ''}}
+<div class="alert alert-danger" role="alert">
+  {{message}}
+</div>
+{{/if_not}}
 <div class="d-flex flex-column flex-shrink-0 h-100 bg-light p-2" style="width: 280px;">
     <ul class="nav nav-pills flex-column mb-auto">
       <li class="nav-item">
