--- a/views/profile-basic.hbs
+++ b/views/profile-basic.hbs
@@ -1,6 +1,7 @@
 <div class="hstack gap-3 h-100 w-100 p-0">
 {{> profile}}
     <form action="/profile" method="post" class="h-100 p-3 w-100">
+    <div id="registerStatus"></div>
     <div class="row mb-3">
         <label for="firstname" class="col-sm-2 col-form-label">First Name</label>
         <div class="col-sm-6">
@@ -22,3 +23,25 @@
     <button type="submit" class="btn btn-primary">Confirm</button>
     </form>
 </div>
+
+<script>
+    const alertPlaceholder = document.getElementById('registerStatus')
+
+const alert = (message, type) => {
+  const wrapper = document.createElement('div')
+  wrapper.innerHTML = [
+    `<div class="alert alert-${type} alert-dismissible" role="alert">`,
+    `   <div>${message}</div>`,
+    '</div>'
+  ].join('')
+
+  alertPlaceholder.append(wrapper)
+}
+
+const alertTrigger = document.getElementById('liveAlertBtn')
+if (alertTrigger) {
+  alertTrigger.addEventListener('click', () => {
+    alert('Nice, you triggered this alert message!', 'success')
+  })
+}
+</script>
