Add mechanics file and link to foul report

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,5 +10,9 @@
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSexywPUsMU_14QIYF2i1d9hZbWPYjx0BdimYEn9DlkJkGlEZA/viewform" class="btn btn-lg btn-primary fw-bold border-white bg-blue">2021 Coach's Report</a></p> --}}
         <p class="lead">
         <a href="https://form.jotform.com/timengland07/profilesheet" class="btn btn-lg btn-primary fw-bold border-white bg-blue">2022 Application</a></p>
+        <p class="lead">
+        <a href="/files/crew-of-7-mechanics.pdf" class="btn btn-lg btn-primary fw-bold border-white bg-blue">2022 Crew of 7 Mechanics</a></p>
+        <p class="lead">
+        <a href="https://docs.google.com/spreadsheets/d/1yKyWw655u1vr3y4wOOPdvvGaKRCkoMeDUrwdwir9U6Y/edit#gid=0" class="btn btn-lg btn-primary fw-bold border-white bg-blue">2022 Foul Report</a></p>
     </main>
 </div>
