--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,7 +6,7 @@
     <script src="/bootstrap-js/bootstrap.min.js"></script>
   </head>
   <body class="d-flex w-100 h-100 p-0 mx-auto flex-column">
-
+    <div class="vstack">
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #76aedc">
       <div class="container-fluid">
         <a class="navbar-brand" href="/">
@@ -24,6 +24,7 @@
         </div>
       </div>
     </nav>
+{{> alert}}
 
     {{{body}}}
 
