--- a/views/partials/reports.hbs
+++ b/views/partials/reports.hbs
@@ -11,7 +11,7 @@
         </a>
       </li>
       <li>
-        <a href="/reports/evaluations" class="nav-link {{evals}} link-dark">
+        <a href="/reports/evaluations" class="nav-link {{evals}}">
           Evaluations
         </a>
       </li>
