--- a/views/reports-fouls.hbs
+++ b/views/reports-fouls.hbs
@@ -1,5 +1,6 @@
 <div class="hstack gap-3 h-100 w-100 p-0">
     {{> reports}}
+    <div class="vstack">
     <table class="table table-striped">
         <thead>
             <tr>
@@ -14,4 +15,5 @@
             </tr>
         </tbody>
     </table>
+    </div>
 </div>
