Update user creation and file names

--- a/views/partials/reports.hbs
+++ b/views/partials/reports.hbs
@@ -15,5 +15,10 @@
           Evaluations
         </a>
       </li>
+      <li>
+        <a href="/reports/documents" class="nav-link {{documents}}">
+        Documents
+        </a>
+      </li>
     </ul>
   </div>
