--- a/views/profile-password-new-only.hbs
+++ b/views/profile-password-new-only.hbs
@@ -1,16 +1,15 @@
 <div class="hstack gap-3 h-100 w-100 p-0">
-{{> profile}}
-    <form action="/profile/password" method="post" class="h-100 p-3 w-100">
+    <form action="/confirm/{{userid}}" method="post" class="h-100 p-3 w-100">
     <div class="row mb-3">
         <label for="newpassword" class="col-sm-2 col-form-label">New Password</label>
         <div class="col-sm-6">
-       <input type="password" class="form-control" id="newPassword" name="newPassword">
+        <input type="password" class="form-control" id="newPassword" name="newPassword">
         </div>
     </div>
     <div class="row mb-4">
         <label for="newpasswordconfirm" class="col-sm-2 col-form-label">Confirm Password</label>
         <div class="col-sm-6">
-       <input type="password" class="form-control" id="newPasswordConfirm" name="newPasswordConfirm">
+        <input type="password" class="form-control" id="newPasswordConfirm" name="newPasswordConfirm">
         </div>
     </div>
     <button id="submit" type="submit" class="btn btn-primary">Confirm</button>
