Update week 1 foul report link

--- a/views/reports-fouls.hbs
+++ b/views/reports-fouls.hbs
@@ -11,7 +11,7 @@
         <tbody>
             <tr>
                 <th scope="row">1</th>
-                <td>Link upcoming</td>
+                <td><a href="https://docs.google.com/spreadsheets/d/1xSYtpYiEnXBpwswZTrixIVitpsSdtiT2y2cZbof6xOY/edit#gid=0">Link</a></td>
             </tr>
         </tbody>
     </table>
