Update confirmation workflow and add logout

--- a/views/authlayout.hbs
+++ b/views/authlayout.hbs
@@ -26,6 +26,7 @@
           {{#if_not userLevel "guest" }}
           <li class="nav-item"><a href="/reports" class="nav-link {{register}}">Reports</a></li>
           {{/if_not}}
+          <li class="nav-item"><a href="/logout" class="nav-link">Logout</a></li>
         </ul>
       </div>
     </div>
