--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,10 +3,8 @@
     <h1>Welcome to the SCIAC.</h1>
         <p class="lead">Please select from the following options:</p>
         <p class="lead">
-        <a href="https://form.jotform.com/timengland07/profilesheet" class="btn btn-lg btn-primary fw-bold border-white bg-blue">2022 Application</a></p>
+        <a href="https://form.jotform.com/timengland07/profilesheet" class="btn btn-lg btn-primary fw-bold border-white bg-blue">Apply</a></p>
         <p class="lead">
-        <a href="/files/crew-of-7-mechanics.pdf" class="btn btn-lg btn-primary fw-bold border-white bg-blue">2022 Crew of 7 Mechanics</a></p>
-        <p class="lead">
-        <a href="https://docs.google.com/spreadsheets/d/1yKyWw655u1vr3y4wOOPdvvGaKRCkoMeDUrwdwir9U6Y/edit#gid=0" class="btn btn-lg btn-primary fw-bold border-white bg-blue">2022 Foul Report</a></p>
+        <a href="/login" class="btn btn-lg btn-primary fw-bold border-white bg-blue">Login</a></p>
     </main>
 </div>
