--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -20,6 +20,7 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 justify-content-end">
             <li class="nav-item"><a href="/" class="nav-link {{home}}" aria-current="page">Home</a></li>
             <li class="nav-item"><a href="/login" class="nav-link {{login}}">Login</a></li>
+            <li class="nav-item"><a href="/confirm" class="nav-link {{confirm}}">Confirm user</a></li>
           </ul>
         </div>
       </div>
