Cleanup of a couple views

--- a/views/authlayout.hbs
+++ b/views/authlayout.hbs
@@ -24,7 +24,7 @@
           <li class="nav-item"><a href="/users" class="nav-link {{register}}">Users</a></li>
           {{/if_equals}}
           {{#if_not userLevel "guest" }}
-          <li class="nav-item"><a href="/reports" class="nav-link {{register}}">Reports</a></li>
+          <li class="nav-item"><a href="/reports" class="nav-link {{reports}}">Reports</a></li>
           {{/if_not}}
           <li class="nav-item"><a href="/logout" class="nav-link">Logout</a></li>
         </ul>
