--- a/views/reports-documents.hbs
+++ b/views/reports-documents.hbs
@@ -9,8 +9,26 @@
         </thead>
         <tbody>
             <tr>
+                <th scope="row"><a href="https://docs.google.com/spreadsheets/d/1Q_z7MEMq3XAXnK_2VxsgqnqkljQN-kb0MOu2FOzZw9k/edit#gid=696641603">
+                SCIAC Master Schedule
+                </a>
+                </th>
+            </tr>
+            <tr>
                 <th scope="row"><a href="/files/crew-of-7-mechanics.pdf">
                 Crew of 7 mechanics
+                </a>
+                </th>
+            </tr>
+            <tr>
+                <th scope="row"><a href="https://www1.arbitersports.com/ArbiterOne/Account/SwitchViews?groupId=107910&userType=3">
+                SCIAC Arbiter
+                </a>
+                </th>
+            </tr>
+            <tr>
+                <th scope="row"><a href="https://www.hudl.com/library/412361">
+                SCIAC Hudl
                 </a>
                 </th>
             </tr>
