Update documents page

--- a/views/reports-documents.hbs
+++ b/views/reports-documents.hbs
@@ -32,6 +32,18 @@
                 </a>
                 </th>
             </tr>
+            <tr>
+                <th scope="row"><a href="/files/sciac-directory.xlsx">
+                SCIAC Directory (Excel format)
+                </a>
+                </th>
+            </tr>
+            <tr>
+                <th scope="row"><a href="https://chapmanu.co1.qualtrics.com/jfe/form/SV_eVx4H7TOlNNChsa">
+                Chapman University health screening (for all officials working CU games)
+                </a>
+                </th>
+            </tr>
         </tbody>
     </table>
     </div>
