Update layout for mobile

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html class="h-100">
+<html>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <head>
     <title>{{title}}</title>
     <link rel='stylesheet' href='/stylesheets/css-output/main.css' />
