--- a/views/reports-fouls.hbs
+++ b/views/reports-fouls.hbs
@@ -6,12 +6,76 @@
             <tr>
                 <th scope="col">Week</th>
                 <th scope="col">Report</th>
+                <th scope="col"></th>
+                <th scope="col"></th>
             </tr>
         </thead>
         <tbody>
             <tr>
                 <th scope="row">1</th>
                 <td><a href="https://docs.google.com/spreadsheets/d/1xSYtpYiEnXBpwswZTrixIVitpsSdtiT2y2cZbof6xOY/edit#gid=0">Link</a></td>
+                <td><a href="https://www.appsheet.com/start/aa13801e-4aa6-4746-8ca7-4b80b11b1c0c">Browser app</a></td>
+                <td><a href="https://www.appsheet.com/newshortcut/aa13801e-4aa6-4746-8ca7-4b80b11b1c0c">Native app</a></td>
+            </tr>
+            <tr>
+                <th scope="row">2</th>
+                <td>Not available</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th scope="row">3</th>
+                <td>Not available</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th scope="row">4</th>
+                <td>Not available</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th scope="row">5</th>
+                <td>Not available</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th scope="row">6</th>
+                <td>Not available</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th scope="row">7</th>
+                <td>Not available</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th scope="row">8</th>
+                <td>Not available</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th scope="row">9</th>
+                <td>Not available</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th scope="row">10</th>
+                <td>Not available</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th scope="row">11</th>
+                <td>Not available</td>
+                <td></td>
+                <td></td>
             </tr>
         </tbody>
     </table>
