Update reports with week 2 entries

--- a/views/partials/reports.hbs
+++ b/views/partials/reports.hbs
@@ -20,5 +20,10 @@
         Documents
         </a>
       </li>
+      <li>
+        <a href="/reports/quizzes" class="nav-link {{quizzes}}">
+        Quizzes
+        </a>
+      </li>
     </ul>
   </div>
