--- a/views/reports-evals.hbs
+++ b/views/reports-evals.hbs
@@ -16,7 +16,8 @@
             </tr>
             <tr>
                 <th scope="row">2</th>
-                <td>Not available</td>
+                <td><a href="https://docs.google.com/spreadsheets/d/1OQyn5JYJ3ZKiLn89i9f4RI8DoSjWDmx65o9jfTYM7e8/edit#gid=0">Link
+                </a></td>
             </tr>
             <tr>
                 <th scope="row">3</th>
