--- a/views/reports-quizzes.hbs
+++ b/views/reports-quizzes.hbs
@@ -5,77 +5,56 @@
         <thead>
             <tr>
                 <th scope="col">Week</th>
-                <th scope="col">Report</th>
-                <th scope="col"></th>
-                <th scope="col"></th>
+                <th scope="col">Quiz</th>
+                <th scope="col">Answers</th>
             </tr>
         </thead>
         <tbody>
             <tr>
                 <th scope="row">1</th>
-                <td><a href="https://docs.google.com/spreadsheets/d/1xSYtpYiEnXBpwswZTrixIVitpsSdtiT2y2cZbof6xOY/edit#gid=0">Link</a></td>
-                <td><a href="https://www.appsheet.com/start/aa13801e-4aa6-4746-8ca7-4b80b11b1c0c">Browser app</a></td>
-                <td><a href="https://www.appsheet.com/newshortcut/aa13801e-4aa6-4746-8ca7-4b80b11b1c0c">Native app</a></td>
+                <td><a href="/files/w1test.pdf">Quiz 1</a></td>
+                <td><a href="/files/w1answers.pdf">Answers 1</a></td>
             </tr>
             <tr>
                 <th scope="row">2</th>
-                <td><a href="https://docs.google.com/spreadsheets/d/1F1H50ER5dH67NCCqvBzGtoe2C3WGRYeSELzD4P0Zqd0/edit#gid=0">Link</a></td>
-                <td></td>
-                <td></td>
+                <td><a href="/files/w2test.pdf">Quiz 2</a></td>
+                <td>Answers 2 available 9/12</td>
             </tr>
             <tr>
                 <th scope="row">3</th>
                 <td>Not available</td>
-                <td></td>
-                <td></td>
             </tr>
             <tr>
                 <th scope="row">4</th>
                 <td>Not available</td>
-                <td></td>
-                <td></td>
             </tr>
             <tr>
                 <th scope="row">5</th>
                 <td>Not available</td>
-                <td></td>
-                <td></td>
             </tr>
             <tr>
                 <th scope="row">6</th>
                 <td>Not available</td>
-                <td></td>
-                <td></td>
             </tr>
             <tr>
                 <th scope="row">7</th>
                 <td>Not available</td>
-                <td></td>
-                <td></td>
             </tr>
             <tr>
                 <th scope="row">8</th>
                 <td>Not available</td>
-                <td></td>
-                <td></td>
             </tr>
             <tr>
                 <th scope="row">9</th>
                 <td>Not available</td>
-                <td></td>
-                <td></td>
             </tr>
             <tr>
                 <th scope="row">10</th>
                 <td>Not available</td>
-                <td></td>
-                <td></td>
             </tr>
             <tr>
                 <th scope="row">11</th>
                 <td>Not available</td>
-                <td></td>
-                <td></td>
             </tr>
         </tbody>
     </table>
