Add week 2 links

--- a/views/reports-fouls.hbs
+++ b/views/reports-fouls.hbs
@@ -20,8 +20,8 @@
             <tr>
                 <th scope="row">2</th>
                 <td><a href="https://docs.google.com/spreadsheets/d/1F1H50ER5dH67NCCqvBzGtoe2C3WGRYeSELzD4P0Zqd0/edit#gid=0">Link</a></td>
-                <td></td>
-                <td></td>
+                <td><a href="https://www.appsheet.com/start/420c2bb1-1348-4b77-beb8-72dd40e417b7">Browser app</a></td>
+                <td><a href="https://www.appsheet.com/newshortcut/420c2bb1-1348-4b77-beb8-72dd40e417b7">Native app</a></td>
             </tr>
             <tr>
                 <th scope="row">3</th>
