--- a/views/reports-quizzes.hbs
+++ b/views/reports-quizzes.hbs
@@ -18,12 +18,12 @@
             <tr>
                 <th scope="row">2</th>
                 <td><a href="/files/w2test.pdf">Quiz 2</a></td>
-                <td>Answers 2 available 9/12</td>
+                <td><a href="/files/w2answers.pdf">Answers 2</a>"</td>
             </tr>
             <tr>
                 <th scope="row">3</th>
-                <td>Not available</td>
-                <td></td>
+                <td><a href="/files/w3test.pdf">Quiz 3</a></td>
+                <td>Answers available Sep 19</td>
             </tr>
             <tr>
                 <th scope="row">4</th>
