--- a/views/reports-evals.hbs
+++ b/views/reports-evals.hbs
@@ -21,7 +21,10 @@
             </tr>
             <tr>
                 <th scope="row">3</th>
-                <td>Not available</td>
+                {{#if_equals userLevel "evaluator" }}
+                <td><a href="https://docs.google.com/spreadsheets/d/1Ia-E3-DifluQuDRaGkunVpPYfIJ_NP9FG4NUF9IgKCo/edit#gid=671745542">Evaluator View</a></td>
+                {{#else}}
+                <td><a href="https://docs.google.com/spreadsheets/d/1VgbkwumcKOOUUo4VJ1zMjL2nw_nFJbKHH8oBWzpupDc/edit#gid=0">Officials View</a></td>
             </tr>
             <tr>
                 <th scope="row">4</th>
