Fix if equals tag

--- a/views/reports-evals.hbs
+++ b/views/reports-evals.hbs
@@ -25,6 +25,7 @@
                 <td><a href="https://docs.google.com/spreadsheets/d/1Ia-E3-DifluQuDRaGkunVpPYfIJ_NP9FG4NUF9IgKCo/edit#gid=671745542">Evaluator View</a></td>
                 {{#else}}
                 <td><a href="https://docs.google.com/spreadsheets/d/1VgbkwumcKOOUUo4VJ1zMjL2nw_nFJbKHH8oBWzpupDc/edit#gid=0">Officials View</a></td>
+                {{/#if_equals}}
             </tr>
             <tr>
                 <th scope="row">4</th>
