--- a/views/reports-fouls.hbs
+++ b/views/reports-fouls.hbs
@@ -25,7 +25,7 @@
             </tr>
             <tr>
                 <th scope="row">3</th>
-                <td></td><a href="https://docs.google.com/spreadsheets/d/15w9dZGCkJfCal91c8NyBhpz-b1o4j5Rl1Vpq4R8s9mo/edit#gid=0">Link</a>></td>
+                <td><a href="https://docs.google.com/spreadsheets/d/15w9dZGCkJfCal91c8NyBhpz-b1o4j5Rl1Vpq4R8s9mo/edit#gid=0">Link</a>></td>
                 <td></td>
                 <td></td>
             </tr>
