Third syntax error, really batting 1.000 today

--- a/views/reports-evals.hbs
+++ b/views/reports-evals.hbs
@@ -23,7 +23,7 @@
                 <th scope="row">3</th>
                 {{#if_equals userLevel "evaluator"}}
                 <td><a href="https://docs.google.com/spreadsheets/d/1Ia-E3-DifluQuDRaGkunVpPYfIJ_NP9FG4NUF9IgKCo/edit#gid=671745542">Evaluator View</a></td>
-                {{#else}}
+                {{else}}
                 <td><a href="https://docs.google.com/spreadsheets/d/1VgbkwumcKOOUUo4VJ1zMjL2nw_nFJbKHH8oBWzpupDc/edit#gid=0">Officials View</a></td>
                 {{/if_equals}}
             </tr>
