Add w3 answers and w4 quiz

--- a/views/reports-quizzes.hbs
+++ b/views/reports-quizzes.hbs
@@ -23,11 +23,11 @@
             <tr>
                 <th scope="row">3</th>
                 <td><a href="/files/w3test.pdf">Quiz 3</a></td>
-                <td>Answers available Sep 19</td>
+                <td><a href="/files/w3answers.pdf">Answers 3</a></td>
             </tr>
             <tr>
                 <th scope="row">4</th>
-                <td>Not available</td>
+                <td><a href="/files/w4test.pdf">Quiz 4</a></td>
                 <td></td>
             </tr>
             <tr>
