Update with week 4 files

--- a/views/partials/reports.hbs
+++ b/views/partials/reports.hbs
@@ -25,5 +25,10 @@
         Quizzes
         </a>
       </li>
+      <li>
+        <a href="/reports/videos" class="nav-link {{videos}}">
+        Videos
+        </a>
+      </li>
     </ul>
   </div>
