--- a/views/reports-fouls.hbs
+++ b/views/reports-fouls.hbs
@@ -31,7 +31,7 @@
             </tr>
             <tr>
                 <th scope="row">4</th>
-                <td>Not available</td>
+                <td><a href="https://docs.google.com/spreadsheets/d/10x4OFOGremMcLstjhEHI48CCHkKqTDjBgPqdMpl99GQ/edit#gid=0">Link</a></td>
                 <td></td>
                 <td></td>
             </tr>
