--- a/views/reports-quizzes.hbs
+++ b/views/reports-quizzes.hbs
@@ -28,11 +28,11 @@
             <tr>
                 <th scope="row">4</th>
                 <td><a href="/files/w4test.pdf">Quiz 4</a></td>
-                <td></td>
+                <td><a href="/files/w4answers.pdf">Answers 4</a></td>
             </tr>
             <tr>
                 <th scope="row">5</th>
-                <td>Not available</td>
+                <td><a href="/file/w5test.pdf">Quiz 5</a></td>
                 <td></td>
             </tr>
             <tr>
