--- a/views/reports-evals.hbs
+++ b/views/reports-evals.hbs
@@ -23,16 +23,20 @@
                 <th scope="row">3</th>
                 {{#if_equals userLevel "evaluator"}}
                 <td><a href="https://docs.google.com/spreadsheets/d/1Ia-E3-DifluQuDRaGkunVpPYfIJ_NP9FG4NUF9IgKCo/edit#gid=671745542">Evaluator View</a></td>
+                <td><a href="https://docs.google.com/spreadsheets/d/1VgbkwumcKOOUUo4VJ1zMjL2nw_nFJbKHH8oBWzpupDc/edit#gid=0">Officials View</a></td>
                 {{else}}
                 <td><a href="https://docs.google.com/spreadsheets/d/1VgbkwumcKOOUUo4VJ1zMjL2nw_nFJbKHH8oBWzpupDc/edit#gid=0">Officials View</a></td>
+                <td></td>
                 {{/if_equals}}
             </tr>
             <tr>
                 <th scope="row">4</th>
                 {{#if_equals userLevel "evaluator"}}
                 <td><a href="https://docs.google.com/spreadsheets/d/1_80tprZCFL7pfXfG6pMBb_7LixkDBFT_39ANxmrdsyg/edit#gid=0">Evaluator View</a></td>
+                <td><a href="https://docs.google.com/spreadsheets/d/1fSH9w78PuRnrnuApGCFsKX4OQvhaikhq8t9Z0tRJzLc/edit#gid=0">Officials View</a></td>
                 {{else}}
                 <td><a href="https://docs.google.com/spreadsheets/d/1fSH9w78PuRnrnuApGCFsKX4OQvhaikhq8t9Z0tRJzLc/edit#gid=0">Officials View</a></td>
+                <td></td>
                 {{/if_equals}}
             </tr>
             <tr>
