--- a/views/reports-evals.hbs
+++ b/views/reports-evals.hbs
@@ -6,6 +6,7 @@
             <tr>
                 <th scope="col">Week</th>
                 <th scope="col">Report</th>
+                <th scope="col"></th>
             </tr>
         </thead>
         <tbody>
@@ -13,11 +14,13 @@
                 <th scope="row">1</th>
                 <td><a href="https://docs.google.com/spreadsheets/d/1QwUh53OD0TlxfTz1UtnjvFwFJCf0nsEsfHJ57cgUg00/edit#gid=0">Link
                 </a></td>
+                <td></td>
             </tr>
             <tr>
                 <th scope="row">2</th>
                 <td><a href="https://docs.google.com/spreadsheets/d/1OQyn5JYJ3ZKiLn89i9f4RI8DoSjWDmx65o9jfTYM7e8/edit#gid=0">Link
                 </a></td>
+                <td></td>
             </tr>
             <tr>
                 <th scope="row">3</th>
@@ -42,30 +45,37 @@
             <tr>
                 <th scope="row">5</th>
                 <td>Not available</td>
+                <td></td>
             </tr>
             <tr>
                 <th scope="row">6</th>
                 <td>Not available</td>
+                <td></td>
             </tr>
             <tr>
                 <th scope="row">7</th>
                 <td>Not available</td>
+                <td></td>
             </tr>
             <tr>
                 <th scope="row">8</th>
                 <td>Not available</td>
+                <td></td>
             </tr>
             <tr>
                 <th scope="row">9</th>
                 <td>Not available</td>
+                <td></td>
             </tr>
             <tr>
                 <th scope="row">10</th>
                 <td>Not available</td>
+                <td></td>
             </tr>
             <tr>
                 <th scope="row">11</th>
                 <td>Not available</td>
+                <td></td>
             </tr>
         </tbody>
     </table>
