--- a/views/reports-videos.hbs
+++ b/views/reports-videos.hbs
@@ -8,6 +8,7 @@
                 <th scope="col">Video Links</th>
                 <th scope="col"></th>
                 <th scope="col"></th>
+                <th scope="col"></th>
             </tr>
         </thead>
         <tbody>
@@ -16,28 +17,33 @@
                 <td><a href="https://www.brainshark.com/arbitersports/22CFOTraining1">CFO National</a></td>
                 <td></td>
                 <td></td>
+                <td></td>
             </tr>
             <tr>
                 <th scope="row">2</th>
                 <td><a href="https://www.brainshark.com/arbitersports/22CFOTraining2">CFO National</a></td>
                 <td><a href="https://app.box.com/s/dm40vujvs8r236hk987d6fo74dui44lj">Pereira/Blandino</a></td>
-                <td><a href="https://drive.google.com/drive/folders/1kRrekq8WCz0shMgyG1ubmizWNgLoHudo?usp=sharing">FCS West</a></td>
+                <td><a href="https://drive.google.com/file/d/1_OyJQOMdxDYS7vRDIQ-9A-K9c8Nwsocc/view?usp=sharing">FCS West</a></td>
+                <td></td>
             </tr>
             <tr>
                 <th scope="row">3</th>
-                <td>Not available</td>
+                <td><a href="https://www.brainshark.com/arbitersports/22CFOTraining3">CFO National</a></td>
                 <td></td>
-                <td></td>
+                <td><a href="https://drive.google.com/file/d/18A8Wsi48CMP4gqNvr6n668eJLuIX_Voe/view?usp=sharing">FCS West</a></td>
+                <td><a href="https://drive.google.com/file/d/1vtDMT4xT-1GtI7n1-UuqFmNd3JJ-C05V/view?ts=63248ef9">SCIAC</a></td>
             </tr>
             <tr>
                 <th scope="row">4</th>
-                <td>Not available</td>
-                <td></td>
-                <td></td>
+                <td><a href="https://www.brainshark.com/arbitersports/22CFOTraining4">CFO National</a></td>
+                <td><a href="https://drive.google.com/file/d/18pv4U9JhDYH7luY4BHpANFQy3RO5yuuT/view?usp=drive_web">Pereira/Blandino</a></td>
+                <td><a href="https://drive.google.com/file/d/1lE5-Tb7swdf93kOmHC1lBs20RZ-TXbZd/view?usp=sharing">FCS West</a></td>
+                <td><a href="https://drive.google.com/file/d/13lcSTg1R160USt33kkYRnHTr5aJXFcEQ/view">SCIAC</a></td>
             </tr>
             <tr>
                 <th scope="row">5</th>
-                <td>Not available</td>
+                <td><a href="https://www.brainshark.com/arbitersports/22CFOTraining5">CFO National</a></td>
+                <td></td>
                 <td></td>
                 <td></td>
             </tr>
@@ -46,10 +52,12 @@
                 <td>Not available</td>
                 <td></td>
                 <td></td>
+                <td></td>
             </tr>
             <tr>
                 <th scope="row">7</th>
                 <td>Not available</td>
+                <td></td>
                 <td></td>
                 <td></td>
             </tr>
@@ -58,10 +66,12 @@
                 <td>Not available</td>
                 <td></td>
                 <td></td>
+                <td></td>
             </tr>
             <tr>
                 <th scope="row">9</th>
                 <td>Not available</td>
+                <td></td>
                 <td></td>
                 <td></td>
             </tr>
@@ -70,10 +80,12 @@
                 <td>Not available</td>
                 <td></td>
                 <td></td>
+                <td></td>
             </tr>
             <tr>
                 <th scope="row">11</th>
                 <td>Not available</td>
+                <td></td>
                 <td></td>
                 <td></td>
             </tr>
