--- a/views/reports-evals.hbs
+++ b/views/reports-evals.hbs
@@ -44,8 +44,13 @@
             </tr>
             <tr>
                 <th scope="row">5</th>
-                <td>Not available</td>
+                {{#if_equals userLevel "evaluator"}}
+                <td><a href="https://docs.google.com/spreadsheets/d/1wllPyZ9WC985msaceCFx5Y5f5Qj9P0-WnWw7SXrm4ls/edit">Evaluator View</a></td>
+                <td><a href="https://docs.google.com/spreadsheets/d/1vuErWbLQbyL6ynxCN5z0iT4kRSpOzB5qc3kp-X9QkC4/edit">Officials View</a></td>
+                {{else}}
+                <td><a href="https://docs.google.com/spreadsheets/d/1fSH9w78PuRnrnuApGCFsKX4OQvhaikhq8t9Z0tRJzLc/edit">Officials View</a></td>
                 <td></td>
+                {{/if_equals}}
             </tr>
             <tr>
                 <th scope="row">6</th>
