--- a/views/reports-fouls.hbs
+++ b/views/reports-fouls.hbs
@@ -37,7 +37,7 @@
             </tr>
             <tr>
                 <th scope="row">5</th>
-                <td>Not available</td>
+                <td><a href="https://docs.google.com/spreadsheets/d/12DDKN4d4cCl-nfkWfwPs-IQqVlgMCtSAtMx81VRKJDU/edit">Link</a></td>
                 <td></td>
                 <td></td>
             </tr>
