Update quizzes with week 5 answers and week 6 quiz

--- a/views/reports-quizzes.hbs
+++ b/views/reports-quizzes.hbs
@@ -32,12 +32,12 @@
             </tr>
             <tr>
                 <th scope="row">5</th>
-                <td><a href="/file/w5test.pdf">Quiz 5</a></td>
-                <td></td>
+                <td><a href="/files/w5test.pdf">Quiz 5</a></td>
+                <td><a href="/files/w5answers.pdf">Answers 5</a></td>
             </tr>
             <tr>
                 <th scope="row">6</th>
-                <td>Not available</td>
+                <td><a href="/files/w6test.pdf">Quiz 6</a></td>
                 <td></td>
             </tr>
             <tr>
