--- a/views/reports-fouls.hbs
+++ b/views/reports-fouls.hbs
@@ -43,7 +43,7 @@
             </tr>
             <tr>
                 <th scope="row">6</th>
-                <td>Not available</td>
+                <td><a href="https://docs.google.com/spreadsheets/d/1luvFtK5Iovd43rouYvJCcOFoMYgKnkUknTcPQ_cpMrk/">Link</a></td>
                 <td></td>
                 <td></td>
             </tr>
