--- a/views/reports-fouls.hbs
+++ b/views/reports-fouls.hbs
@@ -49,7 +49,7 @@
             </tr>
             <tr>
                 <th scope="row">7</th>
-                <td>Not available</td>
+                <td><a href="https://docs.google.com/spreadsheets/d/1-mH94eIeY1JvdUsc3SYYRl4YO518jafGXPTC7c4SXCw/">Link</a></td>
                 <td></td>
                 <td></td>
             </tr>
