--- a/views/reports-evals.hbs
+++ b/views/reports-evals.hbs
@@ -62,9 +62,13 @@
                 {{/if_equals}}
             </tr>
             <tr>
-                <th scope="row">7</th>
-                <td>Not available</td>
+                {{#if_equals userLevel "evaluator"}}
+                <td><a href="https://docs.google.com/spreadsheets/d/17zTPcY7sAueUiIT4bakHZEVdDVD2T3swvoxKxLj4OmE">Evaluator View</a></td>
+                <td><a href="https://docs.google.com/spreadsheets/d/1RoOLT_dbE9zbuuBPeoBq23ApLW9p46gYf6fL5xCN2c0">Officials View</a></td>
+                {{else}}
+                <td><a href="https://docs.google.com/spreadsheets/d/1RoOLT_dbE9zbuuBPeoBq23ApLW9p46gYf6fL5xCN2c0">Officials View</a></td>
                 <td></td>
+                {{/if_equals}}
             </tr>
             <tr>
                 <th scope="row">8</th>
