Fouls/evals for week 8

--- a/views/reports-fouls.hbs
+++ b/views/reports-fouls.hbs
@@ -55,7 +55,7 @@
             </tr>
             <tr>
                 <th scope="row">8</th>
-                <td>Not available</td>
+                <td><a href="https://docs.google.com/spreadsheets/d/1flhRYU6P5YiBe1HcImyFFR8eln2WUGRsYJ5rT2ktjkY/edit?usp=sharing">Link</a></td>
                 <td></td>
                 <td></td>
             </tr>
