--- a/views/reports-evals.hbs
+++ b/views/reports-evals.hbs
@@ -71,9 +71,13 @@
                 {{/if_equals}}
             </tr>
             <tr>
-                <th scope="row">8</th>
-                <td>Not available</td>
+                {{#if_equals userLevel "evaluator"}}
+                <td><a href="https://docs.google.com/spreadsheets/d/1zkK4_uMz2cf5ZplUffQX2e6AlXGJTX9ATsiHiQpPOV0/edit?usp=sharing">Evaluator View</a></td>
+                <td><a href="https://docs.google.com/spreadsheets/d/1Y81DlLT-Yh8Uz-QrY7jlIhwqCZOW3hP6Y24r2dl_Akk/edit?usp=sharing">Officials View</a></td>
+                {{else}}
+                <td><a href="https://docs.google.com/spreadsheets/d/1Y81DlLT-Yh8Uz-QrY7jlIhwqCZOW3hP6Y24r2dl_Akk/edit?usp=sharing">Officials View</a></td>
                 <td></td>
+                {{/if_equals}}
             </tr>
             <tr>
                 <th scope="row">9</th>
