--- a/views/reports-evals.hbs
+++ b/views/reports-evals.hbs
@@ -53,6 +53,7 @@
                 {{/if_equals}}
             </tr>
             <tr>
+                <th scope="row">6</th>
                 {{#if_equals userLevel "evaluator"}}
                 <td><a href="https://docs.google.com/spreadsheets/d/1M6pSv55y_vXUA6esp8-Msz2y3MteBH2sfeFjrB6QIsE">Evaluator View</a></td>
                 <td><a href="https://docs.google.com/spreadsheets/d/1brA4i6igFOr0WqNeZeLLoX51KoYaklWYlJDYOm5ne7M">Officials View</a></td>
@@ -62,6 +63,7 @@
                 {{/if_equals}}
             </tr>
             <tr>
+                <th scope="row">7</th>
                 {{#if_equals userLevel "evaluator"}}
                 <td><a href="https://docs.google.com/spreadsheets/d/17zTPcY7sAueUiIT4bakHZEVdDVD2T3swvoxKxLj4OmE">Evaluator View</a></td>
                 <td><a href="https://docs.google.com/spreadsheets/d/1RoOLT_dbE9zbuuBPeoBq23ApLW9p46gYf6fL5xCN2c0">Officials View</a></td>
@@ -71,6 +73,7 @@
                 {{/if_equals}}
             </tr>
             <tr>
+                <th scope="row">8</th>
                 {{#if_equals userLevel "evaluator"}}
                 <td><a href="https://docs.google.com/spreadsheets/d/1zkK4_uMz2cf5ZplUffQX2e6AlXGJTX9ATsiHiQpPOV0/edit?usp=sharing">Evaluator View</a></td>
                 <td><a href="https://docs.google.com/spreadsheets/d/1Y81DlLT-Yh8Uz-QrY7jlIhwqCZOW3hP6Y24r2dl_Akk/edit?usp=sharing">Officials View</a></td>
