Add week 9 links

--- a/views/reports-fouls.hbs
+++ b/views/reports-fouls.hbs
@@ -61,7 +61,7 @@
             </tr>
             <tr>
                 <th scope="row">9</th>
-                <td>Not available</td>
+                <td><a href="https://docs.google.com/spreadsheets/d/1GyYNiI3rY_OEithPyAMJRvj2FWd1FWl-oMcivLPc2GM/edit?usp=sharing">Link</a></td>
                 <td></td>
                 <td></td>
             </tr>
