--- a/views/reports-evals.hbs
+++ b/views/reports-evals.hbs
@@ -84,8 +84,13 @@
             </tr>
             <tr>
                 <th scope="row">9</th>
-                <td>Not available</td>
+                {{#if_equals userLevel "evaluator"}}
+                <td><a href="https://docs.google.com/spreadsheets/d/17dxa0tlVVfD4mi2F0XRi2sEAP7vYoTkDKY2_hfvZA38/edit?usp=sharing">Evaluator View</a></td>
+                <td><a href="https://docs.google.com/spreadsheets/d/1nhKLQhmalNA1mmq7nAUdX3LZdtjjSaADU_T0DAVgoN0/edit?usp=sharing">Officials View</a></td>
+                {{else}}
+                <td><a href="https://docs.google.com/spreadsheets/d/1nhKLQhmalNA1mmq7nAUdX3LZdtjjSaADU_T0DAVgoN0/edit?usp=sharing">Officials View</a></td>
                 <td></td>
+                {{/if_equals}}
             </tr>
             <tr>
                 <th scope="row">10</th>
