--- a/views/reports-evals.hbs
+++ b/views/reports-evals.hbs
@@ -94,8 +94,13 @@
             </tr>
             <tr>
                 <th scope="row">10</th>
-                <td>Not available</td>
+                {{#if_equals userLevel "evaluator"}}
+                <td><a href="https://docs.google.com/spreadsheets/d/1czIren7qLWT-YjC96_6jfOyLYaJNK8xEjVNtdPcF6Jo/edit?usp=sharing">Evaluator View</a></td>
+                <td><a href="https://docs.google.com/spreadsheets/d/1DSeI1ilQVc46bI7NK9JU6a77aLUxojvRJJzdlxq3xNc/edit?usp=sharing">Officials View</a></td>
+                {{else}}
+                <td><a href="https://docs.google.com/spreadsheets/d/1DSeI1ilQVc46bI7NK9JU6a77aLUxojvRJJzdlxq3xNc/edit?usp=sharing">Officials View</a></td>
                 <td></td>
+                {{/if_equals}}
             </tr>
             <tr>
                 <th scope="row">11</th>
