--- a/views/reports-evals.hbs
+++ b/views/reports-evals.hbs
@@ -104,8 +104,13 @@
             </tr>
             <tr>
                 <th scope="row">11</th>
-                <td>Not available</td>
+                {{#if_equals userLevel "evaluator"}}
+                <td><a href="https://docs.google.com/spreadsheets/d/1rZHuot5muEH9APUthISbRvI0WKveUnPEDgr3NkJmQHs/edit?usp=sharing">Evaluator View</a></td>
+                <td><a href="https://docs.google.com/spreadsheets/d/1bhTjAeNzupo2UcDO-i0JomE-KxZcITdz9-7IMbQol_0/edit?usp=sharing">Officials View</a></td>
+                {{else}}
+                <td><a href="https://docs.google.com/spreadsheets/d/1bhTjAeNzupo2UcDO-i0JomE-KxZcITdz9-7IMbQol_0/edit?usp=sharing">Officials View</a></td>
                 <td></td>
+                {{/if_equals}}
             </tr>
         </tbody>
     </table>
